@@ -222,6 +222,8 @@ TEST_F(ObjectTest, AlgorithmR) {
     EXPECT_STREQ("1000000000.0", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(10), 8, 1.0e9), false).ascii_c_str());
     EXPECT_STREQ("1e-99", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(1), -99, 1.0e-99), false).ascii_c_str());
     EXPECT_STREQ("1e99", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(1), +99, 1.0e+99), false).ascii_c_str());
+
+    EXPECT_STREQ("0.0012", FlonumUtil::flonumToUcs4String(FlonumUtil::algorithmR(Object::makeFixnum(12), -4, 1.2e-3), false).ascii_c_str());
 }
 
 TEST_F(ObjectTest, Pointer) {
